--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <!-- Sidebar - Brand -->
     <a
       class="sidebar-brand d-flex align-items-center justify-content-center"
-      href="index.html"
+      routerLink="/"
     >
       <div class="sidebar-brand-icon rotate-n-15">
         <i class="fas fa-laugh-wink"></i>
@@ -21,9 +21,23 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-      <a class="nav-link" href="index.html">
+      <a class="nav-link" routerLink="/dashboard">
         <i class="fas fa-fw fa-tachometer-alt"></i>
         <span>Dashboard</span></a
+      >
+    </li>
+
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="/page1">
+        <i class="fas fa-fw fa-tachometer-alt"></i>
+        <span>Page1</span></a
+      >
+    </li>
+
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="/page2">
+        <i class="fas fa-fw fa-tachometer-alt"></i>
+        <span>Page2</span></a
       >
     </li>
 
