--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -151,7 +151,7 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" routerLink="/charts">
         <i class="fas fa-fw fa-chart-area"></i>
         <span>Charts</span></a
       >
@@ -159,7 +159,7 @@
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-      <a class="nav-link" href="tables.html">
+      <a class="nav-link" routerLink="/tables">
         <i class="fas fa-fw fa-table"></i>
         <span>Tables</span></a
       >
