加入 routerLinkActive="active" 到 Utilities 選單項目上

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
     </li>
 
     <!-- Nav Item - Utilities Collapse Menu -->
-    <li class="nav-item">
+    <li class="nav-item" routerLinkActive="active">
       <a
         class="nav-link collapsed"
         href="#"
