使用 Router 的 navigate() 進行換頁

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <!-- Earnings (Monthly) Card Example -->
-  <div class="col-xl-3 col-md-6 mb-4" routerLink="/utilities/color/2">
+  <div class="col-xl-3 col-md-6 mb-4" (click)="goTo('/utilities/color', 2)">
     <div class="card border-left-success shadow h-100 py-2">
       <div class="card-body">
         <div class="row no-gutters align-items-center">
@@ -68,7 +68,10 @@
     </div>
   </div>
   <!-- Pending Requests Card Example -->
-  <div class="col-xl-3 col-md-6 mb-4">
+  <div class="col-xl-3 col-md-6 mb-4" (click)="goTo('/utilities/color', 2, {
+    name: 'John',
+    test: 2
+  })">
     <div class="card border-left-warning shadow h-100 py-2">
       <div class="card-body">
         <div class="row no-gutters align-items-center">
