--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,18 +12,41 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
+                <pre>{{ data | json }}</pre>
                 <form class="user">
                   <div class="form-group">
-                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                           aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                    <input type="email" class="form-control form-control-user"
+                           [(ngModel)]="data.email" name="email" required email
+                           #mEmail="ngModel"
+                           aria-describedby="emailHelp"
+                           placeholder="Enter Email Address...">
+                    <ul *ngIf="mEmail.invalid">
+                      <li *ngIf="mEmail.errors.required">請輸入 E-mail 地址</li>
+                      <li *ngIf="mEmail.errors.email">請輸入合法的 E-mail 地址</li>
+                    </ul>
+<pre>mEmail.value = {{mEmail.value}}
+mEmail.pristine = {{mEmail.pristine}}
+mEmail.dirty = {{mEmail.dirty}}
+mEmail.touched = {{mEmail.touched}}
+mEmail.untouched = {{mEmail.untouched}}
+mEmail.enabled = {{mEmail.enabled}}
+mEmail.disabled = {{mEmail.disabled}}
+mEmail.valid = {{mEmail.valid}}
+mEmail.invalid = {{mEmail.invalid}}
+mEmail.errors = {{mEmail.errors | json}}</pre>
                   </div>
                   <div class="form-group">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword"
+                    <input type="password" class="form-control form-control-user"
+                           [(ngModel)]="data.password" name="password" required
+                           #mPassword="ngModel"
                            placeholder="Password">
                   </div>
                   <div class="form-group">
                     <div class="custom-control custom-checkbox small">
-                      <input type="checkbox" class="custom-control-input" id="customCheck">
+                      <input type="checkbox" class="custom-control-input"
+                          [(ngModel)]="data.rememberMe" name="rememberMe"
+                          #mRememberMe="ngModel"
+                      id="customCheck">
                       <label class="custom-control-label" for="customCheck">Remember Me</label>
                     </div>
                   </div>
