--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,14 +13,14 @@
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
                 <pre>{{ data | json }}</pre>
-                <form class="user">
+                <form class="user" #form="ngForm" (ngSubmit)="doSubmit(form)">
                   <div class="form-group">
                     <input type="email" class="form-control form-control-user"
-                           [(ngModel)]="data.email" name="email" required twid
+                           [(ngModel)]="data.email" name="email" required email
                            #mEmail="ngModel"
                            aria-describedby="emailHelp"
                            placeholder="Enter Email Address...">
-                    <ul *ngIf="mEmail.invalid">
+                    <ul *ngIf="form.submitted && mEmail.invalid">
                       <li *ngIf="mEmail.errors?.required">請輸入 E-mail 地址</li>
                       <li *ngIf="mEmail.errors?.email">請輸入合法的 E-mail 地址</li>
                       <li *ngIf="mEmail.errors?.twid">請輸入合法的身分證字號</li>
@@ -52,7 +52,7 @@ mEmail.errors = {{mEmail.errors | json}}</pre>
                       <label class="custom-control-label" for="customCheck">Remember Me</label>
                     </div>
                   </div>
-                  <a href="index.html" class="btn btn-primary btn-user btn-block"> Login </a>
+                  <button type="submit" class="btn btn-primary btn-user btn-block"> Login </button>
                   <hr>
                   <a href="index.html" class="btn btn-google btn-user btn-block">
                     <i class="fab fa-google fa-fw"></i> Login with Google </a>
