--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,8 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
-                <pre>{{ data | json }}</pre>
+                <pre>data = {{ data | json }}
+form.value = {{ form.value | json }}</pre>
                 <form class="user" #form="ngForm" (ngSubmit)="doSubmit(form)"
                   [class.was-validated]="form.submitted || form.touched">
                   <div class="form-group">
@@ -38,6 +39,10 @@ mEmail.invalid = {{mEmail.invalid}}
 mEmail.status = {{mEmail.status}}
 mEmail.errors = {{mEmail.errors | json}}</pre>
                   </div>
+
+                <ng-container ngModelGroup="group1" #mGroup1="ngModelGroup">
+
+
                   <div class="form-group">
                     <input type="password" class="form-control form-control-user"
                            [(ngModel)]="data.password" name="password" required
@@ -53,6 +58,10 @@ mEmail.errors = {{mEmail.errors | json}}</pre>
                       <label class="custom-control-label" for="customCheck">Remember Me</label>
                     </div>
                   </div>
+
+                </ng-container>
+
+
                   <button type="submit" class="btn btn-primary btn-user btn-block"> Login </button>
                   <hr>
                   <a href="index.html" class="btn btn-google btn-user btn-block">
