--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,12 +14,13 @@
                 </div>
                 <pre>data = {{ data | json }}
 form.value = {{ form.value | json }}</pre>
-                <form class="user" #form="ngForm" (ngSubmit)="doSubmit(form)"
-                  [class.was-validated]="form.submitted || form.touched">
+                <form class="user" #form="ngForm" (ngSubmit)="doSubmit(form)">
                   <div class="form-group">
                     <input type="email" class="form-control form-control-user"
                            [(ngModel)]="data.email" name="email" required email
                            #mEmail="ngModel"
+                           [class.is-valid]="mEmail.touched && mEmail.valid"
+                           [class.is-invalid]="mEmail.touched && mEmail.invalid"
                            aria-describedby="emailHelp"
                            placeholder="Enter Email Address...">
                     <ul *ngIf="mEmail.invalid" class="invalid-feedback">
