--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -19,22 +19,22 @@ form.value = {{ form.value | json }}</pre>
                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
                            formControlName="email"
                            aria-describedby="emailHelp" placeholder="Enter Email Address...">
-                           <ul *ngIf="form.get('email').invalid" class="invalid-feedback">
-                            <li *ngIf="form.get('email').errors?.required">請輸入 E-mail 地址</li>
-                            <li *ngIf="form.get('email').errors?.email">請輸入合法的 E-mail 地址</li>
-                            <li *ngIf="form.get('email').errors?.twid">請輸入合法的身分證字號</li>
+                           <ul *ngIf="f('email').invalid" class="invalid-feedback">
+                            <li *ngIf="f('email').errors?.required">請輸入 E-mail 地址</li>
+                            <li *ngIf="f('email').errors?.email">請輸入合法的 E-mail 地址</li>
+                            <li *ngIf="f('email').errors?.twid">請輸入合法的身分證字號</li>
                           </ul>
-      <pre>form.get('email').value = {{form.get('email').value}}
-form.get('email').pristine = {{form.get('email').pristine}}
-form.get('email').dirty = {{form.get('email').dirty}}
-form.get('email').touched = {{form.get('email').touched}}
-form.get('email').untouched = {{form.get('email').untouched}}
-form.get('email').enabled = {{form.get('email').enabled}}
-form.get('email').disabled = {{form.get('email').disabled}}
-form.get('email').valid = {{form.get('email').valid}}
-form.get('email').invalid = {{form.get('email').invalid}}
-form.get('email').status = {{form.get('email').status}}
-form.get('email').errors = {{form.get('email').errors | json}}</pre>
+      <pre>f('email').value = {{f('email').value}}
+f('email').pristine = {{f('email').pristine}}
+f('email').dirty = {{f('email').dirty}}
+f('email').touched = {{f('email').touched}}
+f('email').untouched = {{f('email').untouched}}
+f('email').enabled = {{f('email').enabled}}
+f('email').disabled = {{f('email').disabled}}
+f('email').valid = {{f('email').valid}}
+f('email').invalid = {{f('email').invalid}}
+f('email').status = {{f('email').status}}
+f('email').errors = {{f('email').errors | json}}</pre>
                   </div>
                   <div class="form-group">
                     <input type="password" class="form-control form-control-user" id="exampleInputPassword"
