--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <pre>data = {{ data | json }}
 form.value = {{ form.value | json }}</pre>
-                <form class="user" [formGroup]="form">
+                <form class="user" [formGroup]="form" (ngSubmit)="doSubmit(fg)" #fg="ngForm">
                   <div class="form-group">
                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
                            formControlName="email"
@@ -49,7 +49,7 @@ f('email').errors = {{f('email').errors | json}}</pre>
                       <label class="custom-control-label" for="customCheck">Remember Me</label>
                     </div>
                   </div>
-                  <a href="index.html" class="btn btn-primary btn-user btn-block"> Login </a>
+                  <button type="submit" class="btn btn-primary btn-user btn-block"> Login </button>
                   <hr>
                   <a href="index.html" class="btn btn-google btn-user btn-block">
                     <i class="fab fa-google fa-fw"></i> Login with Google </a>
