--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -36,6 +36,9 @@ f('email').invalid = {{f('email').invalid}}
 f('email').status = {{f('email').status}}
 f('email').errors = {{f('email').errors | json}}</pre>
                   </div>
+
+                  <ng-container formGroupName="group1">
+
                   <div class="form-group">
                     <input type="password" class="form-control form-control-user" id="exampleInputPassword"
                            formControlName="password"
@@ -49,6 +52,9 @@ f('email').errors = {{f('email').errors | json}}</pre>
                       <label class="custom-control-label" for="customCheck">Remember Me</label>
                     </div>
                   </div>
+
+                  </ng-container>
+
                   <button type="submit" class="btn btn-primary btn-user btn-block"> Login </button>
                   <hr>
                   <a href="index.html" class="btn btn-google btn-user btn-block">
