示範動態欄位表單作法

--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -61,6 +61,8 @@ f('email').errors = {{f('email').errors | json}}</pre>
 
                   </ng-container>
 
+                  <button type="button" class="btn btn-primary" (click)="addNewPw()">新增密碼</button>
+
                   <button type="submit" class="btn btn-primary btn-user btn-block"> Login </button>
                   <hr>
                   <a href="index.html" class="btn btn-google btn-user btn-block">
