--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -62,6 +62,7 @@ f('email').errors = {{f('email').errors | json}}</pre>
                   </ng-container>
 
                   <button type="button" class="btn btn-primary" (click)="addNewPw()">新增密碼</button>
+                  <button type="button" class="btn btn-danger" (click)="resetForm()">RESET</button>
 
                   <button type="submit" class="btn btn-primary btn-user btn-block"> Login </button>
                   <hr>
