確保 Data Model 與 Form Model 的結構一致

--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -44,7 +44,7 @@ f('email').errors = {{f('email').errors | json}}</pre>
                     [formGroupName]="i">
 
                   <div class="form-group">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword"
+                    <input type="password" class="form-control form-control-user"
                            formControlName="password"
                            placeholder="Password">
                   </div>
@@ -52,8 +52,8 @@ f('email').errors = {{f('email').errors | json}}</pre>
                     <div class="custom-control custom-checkbox small">
                       <input type="checkbox" class="custom-control-input"
                              formControlName="rememberMe"
-                             id="customCheck">
-                      <label class="custom-control-label" for="customCheck">Remember Me</label>
+                             id="customCheck{{i}}">
+                      <label class="custom-control-label" for="customCheck{{i}}">Remember Me</label>
                     </div>
                   </div>
 
