--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -19,28 +19,28 @@ form.value = {{ form.value | json }}</pre>
                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
                            formControlName="email"
                            aria-describedby="emailHelp" placeholder="Enter Email Address...">
-                           <ul *ngIf="f('email').invalid" class="invalid-feedback">
-                            <li *ngIf="f('email').errors?.required">請輸入 E-mail 地址</li>
-                            <li *ngIf="f('email').errors?.email">請輸入合法的 E-mail 地址</li>
-                            <li *ngIf="f('email').errors?.twid">請輸入合法的身分證字號</li>
+                           <ul *ngIf="fc('email').invalid" class="invalid-feedback">
+                            <li *ngIf="fc('email').errors?.required">請輸入 E-mail 地址</li>
+                            <li *ngIf="fc('email').errors?.email">請輸入合法的 E-mail 地址</li>
+                            <li *ngIf="fc('email').errors?.twid">請輸入合法的身分證字號</li>
                           </ul>
-      <pre>f('email').value = {{f('email').value}}
-f('email').pristine = {{f('email').pristine}}
-f('email').dirty = {{f('email').dirty}}
-f('email').touched = {{f('email').touched}}
-f('email').untouched = {{f('email').untouched}}
-f('email').enabled = {{f('email').enabled}}
-f('email').disabled = {{f('email').disabled}}
-f('email').valid = {{f('email').valid}}
-f('email').invalid = {{f('email').invalid}}
-f('email').status = {{f('email').status}}
-f('email').errors = {{f('email').errors | json}}</pre>
+      <pre>fc('email').value = {{fc('email').value}}
+fc('email').pristine = {{fc('email').pristine}}
+fc('email').dirty = {{fc('email').dirty}}
+fc('email').touched = {{fc('email').touched}}
+fc('email').untouched = {{fc('email').untouched}}
+fc('email').enabled = {{fc('email').enabled}}
+fc('email').disabled = {{fc('email').disabled}}
+fc('email').valid = {{fc('email').valid}}
+fc('email').invalid = {{fc('email').invalid}}
+fc('email').status = {{fc('email').status}}
+fc('email').errors = {{fc('email').errors | json}}</pre>
                   </div>
 
                   <ng-container formArrayName="pwds">
 
                   <ng-container
-                    *ngFor="let item of form.get('pwds')['controls']; let i=index"
+                    *ngFor="let item of fa('pwds').controls; let i=index"
                     [formGroupName]="i">
 
                   <div class="form-group">
